[project]
name = "noctis"
version = "0.1.0"
description = "Prefect workflow orchestration for the Universe ecosystem"
requires-python = ">=3.12"
dependencies = [
    # Core orchestration
    "prefect>=3.6.4",
    
    # Database connectivity
    "asyncpg>=0.30.0",         # Async PostgreSQL driver
    "connectorx>=0.4.4",       # Fast bulk SQL reads
    "polars>=1.18.0",          # DataFrame library for connectorx
    
    # HTTP client
    "httpx>=0.28.0",           # Async HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flows", "utils"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
